# brickbyte

./: .gitignore  LICENSE  Makefile  pyproject.toml
integrations/destination-databricks-py/: pyproject.toml
integrations/destination-databricks-py/destination_databricks/: __init__.py  client.py  destination.py  run.py  spec.json  staged_writer.py  writer.py
notebooks/: brickbyte-example.ipynb
src/brickbyte/: __init__.py  types.py
