[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.1.0"
name = "destination-databricks"
description = "Destination implementation for Databricks."
authors = [ "Sri <sri.tikkireddy@databricks.com>",]
license = "MIT"
readme = "README.md"
documentation = "https://docs.airbyte.com/integrations/destinations/databricks"
homepage = "https://airbyte.com"
repository = "https://github.com/airbytehq/airbyte"
[[tool.poetry.packages]]
include = "destination_databricks"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
databricks-sql-connector = "==3.6.0"
airbyte-cdk = "==0.68.1"
requests = "==2.31.0"

[tool.poetry.scripts]
destination-databricks = "destination_databricks.run:run"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
